allow users to view their own activity logs