@@ -1,13 +1,14 @@
 package com.example.taskmanager.application.usecases;
 
-import com.example.taskmanager.adapters.web.dto.ActionLogResponse;
-import com.example.taskmanager.infrastructure.entity.ActionLogEntity;
-import com.example.taskmanager.infrastructure.repository.ActionLogRepository;
-import org.springframework.stereotype.Service;
-
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import org.springframework.stereotype.Service;
+
+import com.example.taskmanager.adapters.web.dto.ActionLogResponse;
+import com.example.taskmanager.adapters.web.dto.MyActionLogResponse;
+import com.example.taskmanager.infrastructure.entity.ActionLogEntity;
+import com.example.taskmanager.infrastructure.repository.ActionLogRepository;
 
 @Service
 public class ActionLogService {
@@ -18,8 +19,14 @@ public class ActionLogService {
         this.repository = repository;
     }
 
-    public void log(Long userId, String action, String resource, Long resourceId) {
-        ActionLogEntity log = new ActionLogEntity(userId, action, resource, resourceId, LocalDateTime.now());
+    public void log(Long actorUserId, String action, String resource, Long resourceId) {
+        ActionLogEntity log = new ActionLogEntity(actorUserId, action, resource, resourceId, LocalDateTime.now());
+        repository.save(log);
+    }
+
+    public void log(Long actorUserId, Long targetUserId, String action, String resource, Long resourceId) {
+        ActionLogEntity log = new ActionLogEntity(actorUserId, action, resource, resourceId, LocalDateTime.now());
+        log.setTargetUserId(targetUserId);
         repository.save(log);
     }
 
@@ -27,23 +34,39 @@ public class ActionLogService {
         return repository.findAll().stream()
                 .map(log -> new ActionLogResponse(
                         log.getId(),
-                        log.getUserId(),
+                        log.getActorUserId(),  
                         log.getAction(),
                         log.getResource(),
                         log.getResourceId(),
                         log.getTimestamp()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<ActionLogResponse> getLogsByUserId(Long userId) {
-        return repository.findByUserId(userId).stream()
+        return repository.findByActorUserIdOrderByTimestampDesc(userId).stream()
                 .map(log -> new ActionLogResponse(
                         log.getId(),
-                        log.getUserId(),
+                        log.getActorUserId(),
                         log.getAction(),
                         log.getResource(),
                         log.getResourceId(),
                         log.getTimestamp()))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public List<MyActionLogResponse> getMyLogs(Long userId) {
+        List<ActionLogEntity> logs = repository
+                .findByActorUserIdOrTargetUserIdOrderByTimestampDesc(userId, userId);
+
+        return logs.stream()
+                .map(log -> new MyActionLogResponse(
+                        log.getId(),
+                        log.getActorUserId(),
+                        log.getTargetUserId(),
+                        log.getAction(),
+                        log.getResource(),
+                        log.getResourceId(),
+                        log.getTimestamp()))
+                .toList();
     }
 }
